# obs-source-profiler

./: CMakeLists.txt  README.md  buildspec.json  source-profiler.cpp  source-profiler.hpp
.github/scripts/: .Aptfile  .Brewfile  .Wingetfile  .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1  Logger.ps1
.github/scripts/utils.zsh/: check_linux  setup_linux
.github/workflows/: build-project.yaml  check-format.yaml
cmake/linux/: defaults.cmake
data/locale/: en-US.ini  es-ES.ini  zh-CN.ini
